<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        android:textColor="#023047"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edUsuario"
        android:layout_width="258dp"
        android:layout_height="77dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#023047"
        app:layout_constraintEnd_toEndOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="258dp"
        android:layout_height="77dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/edUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edUsuario"
        android:autofillHints="password"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/remember"
        android:textColor="#023047"
        app:layout_constraintStart_toStartOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="217dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edSenha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="123dp"
        android:layout_height="113dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:srcCompat="@drawable/design_sem_nome__1__removebg_preview"
        android:contentDescription="@string/capivara" />
</androidx.constraintlayout.widget.ConstraintLayout>